--- a/ExpoFpApp/app/src/main/res/layout/fragment_login.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_login.xml
@@ -16,11 +16,14 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
-            android:layout_height="298dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/icono"
+            app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
             android:id="@+id/editTextEmailLogin"
@@ -32,6 +35,7 @@
             android:ems="10"
             android:hint="@string/Email"
             android:inputType="textEmailAddress"
+            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,9 +48,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:ems="10"
             android:hint="@string/Password"
             android:inputType="textPassword"
+            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" />
@@ -61,6 +67,7 @@
             android:background="@color/design_default_color_primary"
             android:text="@string/Registro"
             android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/sing_in_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
@@ -70,11 +77,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@color/colorPrimary"
             android:text="@string/Login"
-            android:textColor="@android:color/black"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            app:layout_constraintBottom_toTopOf="@+id/buttonRegistro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" />
@@ -86,7 +94,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/Login"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
