--- a/ExpoFpApp/app/src/main/res/layout/fragment_sign_up.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_sign_up.xml
@@ -12,9 +12,11 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="174dp"
-            android:layout_height="208dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/icono"
+            app:layout_constraintBottom_toTopOf="@+id/editTextNombreRegistro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +30,8 @@
             android:layout_marginEnd="8dp"
             android:background="@color/colorPrimary"
             android:text="@string/Registro"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/buttonRegistroaLogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageViewPreImgPerfil" />
@@ -42,6 +46,7 @@
             android:ems="10"
             android:hint="@string/Nombre"
             android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/editTextEmailRegistro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +60,7 @@
             android:ems="10"
             android:hint="@string/Email"
             android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRegistro"
             app:layout_constraintEnd_toEndOf="@+id/editTextNombreRegistro"
             app:layout_constraintStart_toStartOf="@+id/editTextNombreRegistro"
             app:layout_constraintTop_toBottomOf="@+id/editTextNombreRegistro" />
@@ -67,6 +73,7 @@
             android:ems="10"
             android:hint="@string/Password"
             android:inputType="textPassword"
+            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordRepeat"
             app:layout_constraintEnd_toEndOf="@+id/editTextEmailRegistro"
             app:layout_constraintStart_toStartOf="@+id/editTextEmailRegistro"
             app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegistro" />
@@ -79,6 +86,7 @@
             android:ems="10"
             android:hint="@string/RepetirPass"
             android:inputType="textPassword"
+            app:layout_constraintBottom_toTopOf="@+id/buttonSubirImagen"
             app:layout_constraintEnd_toEndOf="@+id/editTextPasswordRegistro"
             app:layout_constraintStart_toStartOf="@+id/editTextPasswordRegistro"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegistro" />
@@ -87,17 +95,24 @@
             android:id="@+id/buttonSubirImagen"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/SubirImagen"
+            app:layout_constraintBottom_toTopOf="@+id/buttonRegistrar"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageViewPreImgPerfil"
             app:layout_constraintTop_toTopOf="@+id/imageViewPreImgPerfil" />
 
         <ImageView
             android:id="@+id/imageViewPreImgPerfil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="120dp"
             android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/buttonRegistrar"
+            app:layout_constraintEnd_toStartOf="@+id/buttonSubirImagen"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRepeat"
             tools:src="@tools:sample/avatars[0]" />
@@ -109,8 +124,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@color/design_default_color_primary"
             android:text="@string/deRegistroaLogin"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonRegistrar" />
