--- a/ExpoFpApp/app/src/main/res/layout/fragment_proyectores.xml
+++ b/ExpoFpApp/app/src/main/res/layout/fragment_proyectores.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -31,6 +32,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView_titulo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -38,37 +40,29 @@
 
             <TextView
                 android:id="@+id/textView_titulo"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/textView_curso"
                 app:layout_constraintStart_toStartOf="@+id/imageViewProyectoRes"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBarProyRes" />
+                app:layout_constraintTop_toBottomOf="@+id/imageViewProyectoRes" />
 
             <TextView
                 android:id="@+id/textView_curso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageViewProyectoRes"
-                app:layout_constraintTop_toBottomOf="@+id/ratingBarProyRes" />
-
-            <RatingBar
-                android:id="@+id/ratingBarProyRes"
-                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                android:numStars="10"
-                android:rating="0"
-                app:layout_constraintStart_toStartOf="@+id/imageViewProyectoRes"
+                app:layout_constraintStart_toEndOf="@+id/textView_titulo"
                 app:layout_constraintTop_toBottomOf="@+id/imageViewProyectoRes" />
 
         </android.support.constraint.ConstraintLayout>
