--- a/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
@@ -1,11 +1,12 @@
 <div fxFlex="100%" fxFlexFill>
-  <table mat-table [dataSource]="listaUsuariosRes" class="mat-elevation-z8" fxFlexFill>
-  
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtro">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" fxFlexFill>
+
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
       <td mat-cell *matCellDef="let usuario">{{usuario.name}}</td>
     </ng-container>
-  
+
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef>Email</th>
       <td mat-cell *matCellDef="let usuario">{{usuario.email}}</td>
@@ -14,11 +15,14 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let usuario">
-        <button mat-raised-button color="error" (click)="deleteUsuario(usuario)"><i class="material-icons">delete</i></button>
+        <button mat-raised-button color="error" (click)="deleteUsuario(usuario)"><i
+            class="material-icons">delete</i></button>
       </td>
     </ng-container>
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
