--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -8,7 +8,7 @@
 
                     <button mat-icon-button>
                         <a class="twitter-share-button"
-                            href="https://twitter.com/intent/tweet?text=Me+encuentro+en+la+Expo+FP+de+@salesianotriana%2C+disfrutando+de+nombreProyecto%2C+gran+trabajo+de+los+alumnos.%0ADisfruta+de+la+app+y+comparte+los+proyectos+mediante+enlacePlayStore.%0AO+visitanos+en+la+web+enlaceWeb.+%23expoFP"
+                            href="https://twitter.com/intent/tweet?text=Me+encuentro+en+la+Expo+FP+de+@salesianotriana%2C+disfrutando+de+{{proyect.nombre}}%2C+gran+trabajo+de+los+alumnos.%0ADisfruta+de+la+app+y+comparte+los+proyectos+mediante+enlacePlayStore.%0AO+visítanos+en+la+web+enlaceWeb.+%23expoFP"
                             target="_blank|_parent"
                             data-size="large"
                             data-hashtags="example"
